# face-recognition

RecognitionApp/: CMakeLists.txt  filterdialog.cpp  mainwindow.cpp
RecognitionApp/Image/: Image.cpp  ImageProperties.cpp
RecognitionApp/Recognition/Method/: Color.cpp  Contour.cpp
RecognitionApp/Resources/: Resource.qrc
RecognitionApp/Tool/Convert/: Convert.cpp
RecognitionApp/form/: filterdialog.ui  mainwindow.ui
RecognitionApp/include/: filterdialog.h  mainwindow.h
RecognitionApp/include/Image/: Image.h  ImageExtention.h  ImageProperties.h
RecognitionApp/include/Recognition/: IRecognizable.h
RecognitionApp/include/Recognition/Method/: Color.h  Contour.h
RecognitionApp/include/Tool/Convert/: Convert.h
